--- a/data/features.yaml
+++ b/data/features.yaml
@@ -1,7 +1,7 @@
 about:
   name: Stijn Biemans
   tagline: GGZ Agoog | Systeemtherapeutisch werker
-  phone: "06-628708065"
+  phone: "06-6**7***65"
   email: info@stijnbiemans.nl
   links:
     - title: /in/stijnbiemans
