--- a/data/features.yaml
+++ b/data/features.yaml
@@ -10,7 +10,7 @@ about:
     - title: stijnbiemans
       url: https://www.stijnbiemans.nl
       icon: fas fa-globe
-  details: "Ik ben Stijn, 38 jaar, woonachtig in Amersfoort. Opgeleid als social worker, met specialisaties tot GGZ Agoog en Systeemtherapeutisch Werker. Zo'n twintig jaar ervaring in het werk met (kwetsbare) jongeren, en ruim tien jaar ervaring in de specialistische GGZ. Sinds 2017 werkzaam als ambulant behandelaar in een ACT Jeugd team. En op zoek naar een nieuwe uitdaging!"
+  details: "Ik ben Stijn en woon in Amersfoort. Opgeleid als social worker, met specialisaties tot GGZ Agoog en Systeemtherapeutisch Werker. Zo'n twintig jaar ervaring in het werk met (kwetsbare) jongeren, en ruim tien jaar ervaring in de specialistische GGZ. Sinds 2017 werkzaam als ambulant behandelaar in een ACT Jeugd team. En altijd op zoek naar een nieuwe uitdaging!"
 
 skills:
   - groupName: Brede ervaring binnen GGZ 
@@ -45,7 +45,7 @@ skills:
     
 languages:
   - name: Registraties
-    level: SKJ, GGZ Agoog. (NVRG volgt in januari 2024)
+    level: SKJ, GGZ Agoog, NVRG
   - name: Talen
     level: Nederlands, Engels
   - name: Rijbewijs
@@ -55,7 +55,7 @@ languages:
 
 #### NIET IN GEBRUIK NU, info staat onder "languages" #####
 interests:
-  - "✔ Registraties: SKJ, GGZ Agoog (NRVG volgt in januari '24)"
+  - "✔ Registraties: SKJ, GGZ Agoog, NRVG"
   - "✔ Rijbewijs B, eigen vervoer"
   - "✔ Talen: Nederlands, Engels"
   
